<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/primary_color">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_strate"
            android:textColor="@color/p_color"
            android:textSize="60sp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/crea_tu_cuenta"
            android:textColor="@color/p_color"
            android:textSize="20sp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/nombre_completo"
            android:padding="8dp"
            android:drawableStart="@drawable/baseline_person_outline_24"
            android:drawablePadding="8dp"
            android:textColorHint="@color/a_color"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="50dp"
            android:inputType="textPersonName"
            android:textSize="15sp"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/edad"
            android:padding="8dp"
            android:drawableStart="@drawable/baseline_accessibility_24"
            android:drawablePadding="8dp"
            android:textColorHint="@color/a_color"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:inputType="number"
            android:textSize="15sp"
            android:autofillHints="" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/escuela"
            android:padding="8dp"
            android:drawableStart="@drawable/baseline_school_24"
            android:drawablePadding="8dp"
            android:textColorHint="@color/a_color"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:inputType="text"
            android:textSize="15sp"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/grado"
            android:padding="8dp"
            android:drawableStart="@drawable/baseline_format_list_numbered_24"
            android:drawablePadding="8dp"
            android:textColorHint="@color/a_color"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:inputType="text"
            android:textSize="15sp"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/contrasena"
            android:padding="8dp"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:textColorHint="@color/a_color"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:autofillHints="" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/confirme_contrasena"
            android:padding="8dp"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:textColorHint="@color/a_color"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:textColor="@color/a_color"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:backgroundTint="@color/btn_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ya_tienes_una_cuenta"
            android:textColor="@color/p_color"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>
        




        </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>